fix: invalid windows scalling